# kursovaya

./: CMakeLists.txt
FastNoise/: CMakeLists.txt  fastNoise.cpp  fastNoise.h
net/: CMakeLists.txt  generator.cpp  labels.txt  model.caffemodel  model.prototxt  pathes.txt
